--- a/supplycomponent/build.gradle
+++ b/supplycomponent/build.gradle
@@ -23,6 +23,7 @@ android {
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
     api rootProject.ext.dependencies["appcompat-v7"]
+    api rootProject.ext.dependencies["gson"]
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
