--- a/conf.gradle
+++ b/conf.gradle
@@ -16,6 +16,7 @@ ext {
             "design"           : "com.android.support:design:${android["VSupportSdk"]}",
             "annotations"      : "com.android.support:support-annotations:${android["VSupportSdk"]}",
             "recyclerview-v7"  : "com.android.support:recyclerview-v7:${android["VSupportSdk"]}",
-            "constraint-layout": "com.android.support.constraint:constraint-layout:1.1.3"
+            "constraint-layout": "com.android.support.constraint:constraint-layout:1.1.3",
+            "gson"                         : "com.google.code.gson:gson:2.6.2",//gson
     ]
 }
