--- a/conf.gradle
+++ b/conf.gradle
@@ -3,7 +3,7 @@ ext {
             compileSdkVersion: 28,
             buildToolsVersion: "28.0.0",
             minSdkVersion    : 18,
-            targetSdkVersion : 24,
+            targetSdkVersion : 28,
             versionCode      : 1,
             versionName      : '1.0.0',
             VSupportSdk      : '28.0.0',
@@ -11,12 +11,16 @@ ext {
     ]
 
     dependencies = [
-            "appcompat-v7"     : "com.android.support:appcompat-v7:${android["VSupportSdk"]}",
-            "support-v4"       : "com.android.support:support-v4:${android["VSupportSdk"]}",
-            "design"           : "com.android.support:design:${android["VSupportSdk"]}",
-            "annotations"      : "com.android.support:support-annotations:${android["VSupportSdk"]}",
-            "recyclerview-v7"  : "com.android.support:recyclerview-v7:${android["VSupportSdk"]}",
-            "constraint-layout": "com.android.support.constraint:constraint-layout:1.1.3",
-            "gson"                         : "com.google.code.gson:gson:2.6.2",//gson
+            "appcompat-v7"       : "com.android.support:appcompat-v7:${android["VSupportSdk"]}",
+            "support-v4"         : "com.android.support:support-v4:${android["VSupportSdk"]}",
+            "design"             : "com.android.support:design:${android["VSupportSdk"]}",
+            "annotations"        : "com.android.support:support-annotations:${android["VSupportSdk"]}",
+            "recyclerview-v7"    : "com.android.support:recyclerview-v7:${android["VSupportSdk"]}",
+            "constraint-layout"  : "com.android.support.constraint:constraint-layout:1.1.3",
+            "gson"               : "com.google.code.gson:gson:2.6.2",//gson
+            "gms-play-services-location"  : "com.google.android.gms:play-services-location:16.0.0",//gms:play-services-location
+            "okhttp3"            : "com.squareup.okhttp3:okhttp:3.4.2",//okhttp3
+            "okhttp3-interceptor": "com.squareup.okhttp3:logging-interceptor:3.4.2",//okhttp3-interceptor
+
     ]
 }
