--- a/supplycomponent/src/main/AndroidManifest.xml
+++ b/supplycomponent/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+
 
     <application android:networkSecurityConfig="@xml/network_security_config">
         <provider
@@ -22,5 +26,10 @@
                 android:resource="@xml/file_path" />
         </provider>
         <activity android:name=".activity.AndroidORequestActivity" />
+        <service android:name=".loaction.SmartLocationService"
+            android:enabled="true"
+            android:exported="false"
+            />
+
     </application>
 </manifest>
